Updated cronjob endpoint
